c4prj3_finish/grade.txt
Grading at Sun Jul 21 12:47:30 UTC 2019
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
cards.c: In function ‘card_from_letters’:
cards.c:170:10: error: ‘val’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   return temp;
          ^
cc1: all warnings being treated as errors
<builtin>: recipe for target 'cards.o' failed
make: *** [cards.o] Error 1
make failed

Overall Grade: F
